<resources>
    <string name="app_name">InterCareApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Name">Name:</string>
    <string name="Address">Address:</string>
    <string name="Rating">Rating:</string>
    <string name="Email">"Email: "</string>
    <string name="Treatments">Treatments:</string>
</resources>
